k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: caloriesapp
  labels:
    name: caloriesapp
    environment: production
